# zhlink

./: .gitignore  README.md  ZHCashRPC_new.py  ZeroScanRPC.py  address_generator_zhcash.py  config.py  index.html  mnemonic.py  pyproject.toml  requirements.txt  run.py  test_rpc.py  zhlink_lite_2.py
.github/workflows/: python-publish.yml
bot/: main.py
examples/: check_balance.py  create_bip39_wallet.py  create_wallet.py  mass_send.json  mass_send.py  mass_send_zrc20.json  run_all_examples.py  send_to_contract.py  send_zhc.py  simple_balance.py  simple_beginner_api.py  simple_create_address.py  simple_send_usdz_gas_free.py  simple_send_zhc.py  usdz_receiver_service.py  watch_deposit_and_forward_usdz.py  zhc_seed_addresses.py
scripts/: sync_readme_version.py
test/: test_api.py
tests/: test_smoke.py
zhlink/: __init__.py  _rawtx_bridge.py  address.py  api.py  cache.py  config.py  errors.py  logging_config.py  mass.py  mnemonic.py  realtime.py  receiver.py  rpc.py  signer.py  zeroscan.py
zhlink/_vendor/zhc_rawtx/: __init__.py  cli.py  core.py  gasfree.py
zhlink/templates/: mass_send_usdz.json  mass_send_zhc.json
