[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhlink"
version = "0.1.18"
description = "Self-contained Python library for ZHCASH addresses, balances, ZHC sends, and USDZ gas-free sends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9",
  "cryptography>=42",
  "httpx==0.28.1",
  "mnemonic==0.21",
  "pycryptodome>=3.20",
]
authors = [
  { name = "ZHCASH" },
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["zhlink*"]

[tool.setuptools.package-data]
zhlink = [
  "_vendor/bip39_english.txt",
  "_vendor/zhc_rawtx/*.py",
  "templates/*.json",
]
